force-app/main/default/objects/Loan_Applicant__c/fields/Aadhaar_Verification__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aadhaar Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Aadhar Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants2</relationshipName>
    <type>Lookup</type>
</CustomField>