force-app/main/default/objects/Loan_Applicant__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(ISBLANK(Entity_Name__c ), First_Name__c +&apos; &apos;+ Middle_Name__c +&apos; &apos;+ Last_Name__c , Entity_Name__c )</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>