force-app/main/default/objects/Loan_Applicant__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Address</fullName>
            </value>
            <value>
                <fullName>Residence Address</fullName>
            </value>
            <value>
                <fullName>Office Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>