force-app/main/default/objects/Loan_Applicant__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>CASE(MONTH(TODAY()) - MONTH( Date_of_Birth__c ),
0,
IF(DAY(TODAY()) &gt;= DAY(Date_of_Birth__c ), YEAR(TODAY()) - YEAR(Date_of_Birth__c ), YEAR(TODAY()) - YEAR(Date_of_Birth__c ) - 1),
IF(MONTH(TODAY()) &lt; MONTH(Date_of_Birth__c ), YEAR(TODAY()) - YEAR(Date_of_Birth__c ) - 1, YEAR(TODAY()) - YEAR(Date_of_Birth__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>