force-app/main/default/objects/Loan_Applicant__c/fields/Alternate_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Number__c</fullName>
    <label>Alternate Number</label>
    <type>Phone</type>
</CustomField>