force-app/main/default/objects/Loan_Applicant__c/fields/Annual_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Turnover__c</fullName>
    <label>Annual Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>