force-app/main/default/objects/Loan_Applicant__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(First_Name__c)) , First_Name__c, &apos;&apos;) + &apos; &apos; + IF( NOT(ISBLANK(Middle_Name__c)) , Middle_Name__c, &apos;&apos;) + &apos; &apos; + IF( NOT(ISBLANK(Last_Name__c)) , Last_Name__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>