force-app/main/default/objects/Loan_Applicant__c/fields/Applicant_Photo__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Photo__c</fullName>
    <label>Applicant Photo</label>
    <type>Url</type>
</CustomField>