force-app/main/default/objects/Loan_Applicant__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>Loan_Application__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application</label>
    <type>Text</type>
</CustomField>