force-app/main/default/objects/Loan_Applicant__c/fields/Applying_for_Loan_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Applying_for_Loan_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applying for Loan Confirmation</label>
    <type>Checkbox</type>
</CustomField>