force-app/main/default/objects/Loan_Applicant__c/fields/Asset_Documented_Quotation_Verified__c.field-meta.xml
<CustomField>
    <fullName>Asset_Documented_Quotation_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset Documented Quotation Verified</description>
    <inlineHelpText>Asset Documented Quotation Verified via TVR</inlineHelpText>
    <label>Asset Documented Quotation Verified</label>
    <type>Checkbox</type>
</CustomField>