force-app/main/default/objects/Loan_Applicant__c/fields/Beneficiery_of_GST_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Beneficiery_of_GST_Benefit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficiery of GST Benefit</label>
    <type>Checkbox</type>
</CustomField>