force-app/main/default/objects/Loan_Applicant__c/fields/BL_Active_Since__c.field-meta.xml
<CustomField>
    <fullName>BL_Active_Since__c</fullName>
    <label>Active Since</label>
    <type>Date</type>
</CustomField>