force-app/main/default/objects/Loan_Applicant__c/fields/BL_Address__c.field-meta.xml
<CustomField>
    <fullName>BL_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>