force-app/main/default/objects/Loan_Applicant__c/fields/BL_Applicant_GST_registratio__c.field-meta.xml
<CustomField>
    <fullName>BL_Applicant_GST_registratio__c</fullName>
    <label>Applicant GST registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>