force-app/main/default/objects/Loan_Applicant__c/fields/BL_Balance_Tenure_in_months__c.field-meta.xml
<CustomField>
    <fullName>BL_Balance_Tenure_in_months__c</fullName>
    <label>Balance Tenure(in months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>