force-app/main/default/objects/Loan_Applicant__c/fields/BL_Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>BL_Business_Activity__c</fullName>
    <label>Business Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>