force-app/main/default/objects/Loan_Applicant__c/fields/BL_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Importer</fullName>
            </value>
            <value>
                <fullName>Exporter</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>