force-app/main/default/objects/Loan_Applicant__c/fields/BL_Business_Vintage__c.field-meta.xml
<CustomField>
    <fullName>BL_Business_Vintage__c</fullName>
    <label>Business Vintage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>