force-app/main/default/objects/Loan_Applicant__c/fields/BL_Date_of_Report_Generation__c.field-meta.xml
<CustomField>
    <fullName>BL_Date_of_Report_Generation__c</fullName>
    <label>Date of Report Generation</label>
    <type>Date</type>
</CustomField>