force-app/main/default/objects/Loan_Applicant__c/fields/BL_Gradation_obtained_by_MSME__c.field-meta.xml
<CustomField>
    <fullName>BL_Gradation_obtained_by_MSME__c</fullName>
    <label>Gradation obtained by MSME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>