force-app/main/default/objects/Loan_Applicant__c/fields/BL_IEC_Importer_Exporter_Code__c.field-meta.xml
<CustomField>
    <fullName>BL_IEC_Importer_Exporter_Code__c</fullName>
    <label>IEC(Importer Exporter Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>