force-app/main/default/objects/Loan_Applicant__c/fields/BL_If_rented_monthly_rent__c.field-meta.xml
<CustomField>
    <fullName>BL_If_rented_monthly_rent__c</fullName>
    <label>If rented, monthly rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>