force-app/main/default/objects/Loan_Applicant__c/fields/BL_Income_Considered__c.field-meta.xml
<CustomField>
    <fullName>BL_Income_Considered__c</fullName>
    <label>Income Considered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>