force-app/main/default/objects/Loan_Applicant__c/fields/BL_Industry_Details__c.field-meta.xml
<CustomField>
    <fullName>BL_Industry_Details__c</fullName>
    <label>Industry Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>