force-app/main/default/objects/Loan_Applicant__c/fields/BL_Monthly_Installment__c.field-meta.xml
<CustomField>
    <fullName>BL_Monthly_Installment__c</fullName>
    <label>Monthly Installment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>