force-app/main/default/objects/Loan_Applicant__c/fields/BL_Name_of_Existing_Lender__c.field-meta.xml
<CustomField>
    <fullName>BL_Name_of_Existing_Lender__c</fullName>
    <label>Name of Existing Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>