force-app/main/default/objects/Loan_Applicant__c/fields/BL_Number_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>BL_Number_of_Dependents__c</fullName>
    <label>Number of Dependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>