force-app/main/default/objects/Loan_Applicant__c/fields/BL_Other_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>BL_Other_Marital_Status__c</fullName>
    <label>Other Marital Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>