force-app/main/default/objects/Loan_Applicant__c/fields/BL_Other_Purpose_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>BL_Other_Purpose_of_Loan__c</fullName>
    <label>Other Purpose of Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>