force-app/main/default/objects/Loan_Applicant__c/fields/BL_Other_Religion__c.field-meta.xml
<CustomField>
    <fullName>BL_Other_Religion__c</fullName>
    <label>Other Religion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>