force-app/main/default/objects/Loan_Applicant__c/fields/BL_Proof_of_Identity__c.field-meta.xml
<CustomField>
    <fullName>BL_Proof_of_Identity__c</fullName>
    <label>Proof of Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>UID (Aadhaar)</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
            <value>
                <fullName>MNREGA Job Card</fullName>
            </value>
            <value>
                <fullName>National Population Register (NPR)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>