force-app/main/default/objects/Loan_Applicant__c/fields/BL_PSL_Category__c.field-meta.xml
<CustomField>
    <fullName>BL_PSL_Category__c</fullName>
    <label>PSL Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-PSL</fullName>
            </value>
            <value>
                <fullName>MSME</fullName>
            </value>
            <value>
                <fullName>Export Credit</fullName>
            </value>
            <value>
                <fullName>Education Loans</fullName>
            </value>
            <value>
                <fullName>Housing Loan</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Social Infrastructure</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>PSL</fullName>
                <isActive>false</isActive>
                <label>PSL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>