force-app/main/default/objects/Loan_Applicant__c/fields/BL_PSL_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>BL_PSL_Sub_Category__c</fullName>
    <label>PSL Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan against warehouse receipt</fullName>
            </value>
            <value>
                <fullName>Consumer loans</fullName>
            </value>
            <value>
                <fullName>Personal Loans</fullName>
            </value>
            <value>
                <fullName>Two Whealer loans</fullName>
            </value>
            <value>
                <fullName>Car / Sumo loans</fullName>
            </value>
            <value>
                <fullName>Gold Loans</fullName>
            </value>
            <value>
                <fullName>Transport Vehicles(beyond fleet of 10)</fullName>
            </value>
            <value>
                <fullName>Bus loans(NTBU)</fullName>
            </value>
            <value>
                <fullName>Trading advances (Non Priority)</fullName>
            </value>
            <value>
                <fullName>large Enterprises- Mfg</fullName>
            </value>
            <value>
                <fullName>Large Enterprises-Service</fullName>
            </value>
            <value>
                <fullName>Real Estate Adv- Secured By resd Mort</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate Property</fullName>
            </value>
            <value>
                <fullName>Cmrc Real Estate to Blds/ Land Dev/Colonizers</fullName>
            </value>
            <value>
                <fullName>Commercial real Estate for Infra Development</fullName>
            </value>
            <value>
                <fullName>Commercial real Estate- others(NTBU)</fullName>
            </value>
            <value>
                <fullName>Housing Loans(Purchase and Construction)</fullName>
            </value>
            <value>
                <fullName>Housing Loans for repairs</fullName>
            </value>
            <value>
                <fullName>Staff Housing Loans</fullName>
            </value>
            <value>
                <fullName>OD againt Salary- Staff</fullName>
            </value>
            <value>
                <fullName>OD againt Salary- other than Staff</fullName>
            </value>
            <value>
                <fullName>Loans against Deposit/Security/NSCs/KVPs</fullName>
            </value>
            <value>
                <fullName>Bill Purchased</fullName>
            </value>
            <value>
                <fullName>Other Non Priority</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Non PSL Agriculture and Allied Activity (9100)</fullName>
            </value>
            <value>
                <fullName>Non PSL Housing Loans (9400)</fullName>
            </value>
            <value>
                <fullName>Non Priority Sector Lending</fullName>
            </value>
            <value>
                <fullName>Farm Credit</fullName>
            </value>
            <value>
                <fullName>Agriculture Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>