force-app/main/default/objects/Loan_Applicant__c/fields/BL_Purpose_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>BL_Purpose_of_Loan__c</fullName>
    <label>Purpose of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working capital requirements of the existing business</fullName>
            </value>
            <value>
                <fullName>Repairs, renovation or extension of the existing business unit</fullName>
            </value>
            <value>
                <fullName>Purchase of machinery or equipment</fullName>
            </value>
            <value>
                <fullName>General credit needs of the existing business</fullName>
            </value>
            <value>
                <fullName>Debt consolidation</fullName>
            </value>
            <value>
                <fullName>Balance Transfer</fullName>
            </value>
            <value>
                <fullName>Business expansion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>