force-app/main/default/objects/Loan_Applicant__c/fields/BL_RBI_Willful_Defaulter_Check__c.field-meta.xml
<CustomField>
    <fullName>BL_RBI_Willful_Defaulter_Check__c</fullName>
    <label>RBI Willful Defaulter Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>