force-app/main/default/objects/Loan_Applicant__c/fields/BL_Share_Holding_Pattern__c.field-meta.xml
<CustomField>
    <fullName>BL_Share_Holding_Pattern__c</fullName>
    <label>Share Holding Pattern</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>