force-app/main/default/objects/Loan_Applicant__c/fields/BL_Shareholding_of_Women__c.field-meta.xml
<CustomField>
    <fullName>BL_Shareholding_of_Women__c</fullName>
    <label>Shareholding of Women</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>