force-app/main/default/objects/Loan_Applicant__c/fields/BL_SSI_TIN_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>BL_SSI_TIN_Registration_Number__c</fullName>
    <label>SSI/TIN Registration Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>