force-app/main/default/objects/Loan_Applicant__c/fields/BL_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>BL_Sub_Industry__c</fullName>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Opthalamic</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Mammograph</fullName>
            </value>
            <value>
                <fullName>Concrete and Road Construction Equipment</fullName>
            </value>
            <value>
                <fullName>HLEMP MIG I</fullName>
            </value>
            <value>
                <fullName>HLNEMP MIG I</fullName>
            </value>
            <value>
                <fullName>Haulage</fullName>
            </value>
            <value>
                <fullName>HLNEMP MIG II</fullName>
            </value>
            <value>
                <fullName>HLEMP EWS/LIG.</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>HLEMP MIG II</fullName>
            </value>
            <value>
                <fullName>HLEMP NORMAL</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Car Carrier</fullName>
            </value>
            <value>
                <fullName>Agri Products</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Earth Moving</fullName>
            </value>
            <value>
                <fullName>Material Handling &amp; Processing Machinery</fullName>
            </value>
            <value>
                <fullName>HLNEMP EWS/LIG</fullName>
            </value>
            <value>
                <fullName>HLNEMP NORMAL</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>