force-app/main/default/objects/Loan_Applicant__c/fields/BL_Sub_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>BL_Sub_Sub_Category__c</fullName>
    <label>Sub-Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investment in Plant &amp; Machinery or Equipment is upto 1 crore and turnover is upto 5 crore (2150)</fullName>
            </value>
            <value>
                <fullName>Investment in Plant &amp; Machinery or Equipment is &gt; 1 crore but does not exceed 10 crore and(2230)</fullName>
            </value>
            <value>
                <fullName>Post Shipment Export Credit (3200)</fullName>
            </value>
            <value>
                <fullName>Purchase/ Construction of a dwelling unit at Other Centres [upto 25 Lakh] (5200)</fullName>
            </value>
            <value>
                <fullName>Repair to damaged dwelling unit at Metro Centres upto 10 Lakh and other Centres upto 6 Lakh(5300)</fullName>
            </value>
            <value>
                <fullName>Bank Loans to government agency for construction of dwelling units for slum subject to a ceil(5400)</fullName>
            </value>
            <value>
                <fullName>Loans upto 50000 per borrower to individuals and their SHG/JLG provided the individual borro(8100)</fullName>
            </value>
            <value>
                <fullName>Loans to distress persons (8200)</fullName>
            </value>
            <value>
                <fullName>Crop loans to farmers, Medium and long-term loans for agriculture and allied activities, Loans(9120)</fullName>
            </value>
            <value>
                <fullName>Bank Loans to government agency for construction of dwelling units for slum above1 million/u (9440)</fullName>
            </value>
            <value>
                <fullName>TReDS (2340)</fullName>
            </value>
            <value>
                <fullName>Loans to Co-operative Societies</fullName>
            </value>
            <value>
                <fullName>Loan to Manufacturing Enterprises [Investment upto 25 Lakh]</fullName>
            </value>
            <value>
                <fullName>Overdraft upto 5000 in PMJDY accounts</fullName>
            </value>
            <value>
                <fullName>Loan to Manufacturing Enterprises [Investment &gt; 5 Cr to 10 Cr.]</fullName>
            </value>
            <value>
                <fullName>Loan for Plant tissue culture Agri Biotechnology</fullName>
            </value>
            <value>
                <fullName>Production of Bio-Pesticide Bio Fertilisers, Vermi Composting</fullName>
            </value>
            <value>
                <fullName>Loan for Food Agro Processing (Up to 100 Cr.)</fullName>
            </value>
            <value>
                <fullName>Advances to Khadi &amp; Village Industries Sector [KVI]</fullName>
            </value>
            <value>
                <fullName>Loan to Service Enterprises [Investment &gt; 10 Lakh to 2 Cr.]</fullName>
            </value>
            <value>
                <fullName>Crop Loans</fullName>
            </value>
            <value>
                <fullName>Loan for Investment Credit</fullName>
            </value>
            <value>
                <fullName>Loan for Allied Activities</fullName>
            </value>
            <value>
                <fullName>Other Agriculture Loans</fullName>
            </value>
            <value>
                <fullName>Loans for construction of storage facilities (Warehouses, market yards,godowns), cold storage</fullName>
            </value>
            <value>
                <fullName>Loan for Soil conservation and watershed</fullName>
            </value>
            <value>
                <fullName>Seed Production</fullName>
            </value>
            <value>
                <fullName>Loan for setting up Agri Clinics &amp; Agri Business Centres</fullName>
            </value>
            <value>
                <fullName>Loan to Service Enterprises [Investment upto 10 Lakh]</fullName>
            </value>
            <value>
                <fullName>Loan to Manufacturing Enterprises [Investment &gt; 25 Lakh to 5 Cr.]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>