force-app/main/default/objects/Loan_Applicant__c/fields/BL_Type_of_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>BL_Type_of_Enterprise__c</fullName>
    <label>Type of Enterprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Micro</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>