force-app/main/default/objects/Loan_Applicant__c/fields/BL_Udyam_available__c.field-meta.xml
<CustomField>
    <fullName>BL_Udyam_available__c</fullName>
    <label>Udyam available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>