force-app/main/default/objects/Loan_Applicant__c/fields/BL_Udyam_Registration_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>BL_Udyam_Registration_Application_Date__c</fullName>
    <label>Udyam Registration Application Date</label>
    <type>Date</type>
</CustomField>