force-app/main/default/objects/Loan_Applicant__c/fields/BL_URC__c.field-meta.xml
<CustomField>
    <fullName>BL_URC__c</fullName>
    <label>URC Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>